Changing Layout and fix some bugs

--- a/src/app/views/chart.html
+++ b/src/app/views/chart.html
@@ -7,7 +7,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.13/moment-timezone-with-data-2012-2022.min.js"></script>
 
 
-<div id="chart_dom"></>
+<div id="chart_dom"></div>
 
 <script>
     Highcharts.getJSON('http://10.121.12.11:80/temperature', function (data) {
