--- a/public/styles/dark_unica.css
+++ b/public/styles/dark_unica.css
@@ -3,12 +3,11 @@
 /**************************CHART****************************/
 
 #chart_dom{
-    margin: 8px auto;
+    margin-top: 80px;
+    width: 100%;
     height: 400px;
     min-width: 310px;
     max-width: 700px;
-    position: relative;
-    top: -20%;
     color: #E0E0E3;
 }
 
