--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,19 +7,26 @@
 }
 
 html,body{
-    height: 100%;
-    background-color: #232323;
+    max-height: 100vh;
     font-family: 'Roboto', sans-serif;
 }
 
 /**************************CONFIG-GERAIS****************************/
-
-.wallpaper{
+canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    min-height: 70vh;
-    background-image: url('../assets/wallpaper.jpg');
-    background-position: center;
-    translate: ;
+    min-height: 100%;
+}
+
+#particles-js{
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    min-height: 100%;
+    overflow-y: hidden;
+    background-color: #002;
 }
 
 .container{
@@ -27,6 +34,10 @@ html,body{
     width: 100%;
     max-width: 900px;
     padding: 32px 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /**************************END-CONFIG-GERAIS****************************/
@@ -34,6 +45,7 @@ html,body{
 /**************************CARDS-TEMPERATURE-HUMIDITY****************************/
 
 .cards{
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 8px;
@@ -48,15 +60,21 @@ html,body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.568);
-    box-shadow: 0px 0px 38px -10px rgb(228, 228, 228);
+    background-color: #111;
+    box-shadow: 0px 0px 38px -10px rgb(95, 95, 95);
     border-radius: 16px 40px 15px;
     border: 5px solid rgba(0, 0, 0, 0);
     position: relative;
-    transition: 400ms linear;
-    font-size: 152px;
+    text-align: center;
+    font-size: 9rem;
     font-weight: 900;
     color: #fff;
+    transition: 400ms linear;
+    z-index: 2;
+}
+
+i{
+    font-style: normal;
 }
 
 .card:hover{
@@ -163,5 +181,10 @@ html,body{
     }
     .modal .alert h1{
         font-size: 2em;
+    }
+}
+@media (max-height: 852px){
+    #particles-js{
+        min-height: 120%;
     }
 }
